[gd_scene load_steps=2 format=3 uid="uid://d0jc13l7mw3uk"]

[ext_resource type="Script" path="res://multiplayer_screen.gd" id="1_syq2d"]

[node name="multiplayer_screen" type="Node2D"]
script = ExtResource("1_syq2d")

[node name="server_address" type="Label" parent="."]
offset_left = 357.0
offset_top = 212.0
offset_right = 424.0
offset_bottom = 235.0
text = "Address:"

[node name="server_port" type="Label" parent="."]
offset_left = 362.0
offset_top = 256.0
offset_right = 429.0
offset_bottom = 279.0
text = "Port:"

[node name="server_address_input" type="TextEdit" parent="."]
offset_left = 438.0
offset_top = 210.0
offset_right = 781.0
offset_bottom = 240.0

[node name="server_port_input" type="TextEdit" parent="."]
offset_left = 438.0
offset_top = 251.0
offset_right = 781.0
offset_bottom = 281.0

[node name="multiplayer title" type="Label" parent="."]
offset_left = 517.0
offset_top = 126.0
offset_right = 672.0
offset_bottom = 149.0
text = "Create or Join Game"

[node name="create" type="Button" parent="."]
offset_left = 430.0
offset_top = 339.0
offset_right = 526.0
offset_bottom = 382.0
text = "CREATE"

[node name="join" type="Button" parent="."]
offset_left = 555.0
offset_top = 339.0
offset_right = 652.0
offset_bottom = 381.0
text = "JOIN"

[node name="exit" type="Button" parent="."]
offset_left = 683.0
offset_top = 338.0
offset_right = 785.0
offset_bottom = 379.0
text = "EXIT"

[node name="error" type="Label" parent="."]
offset_left = 429.0
offset_top = 428.0
offset_right = 789.0
offset_bottom = 474.0
text = "todo error"

[connection signal="pressed" from="create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
